generate view and video page

--- a/templates/video/viewVideo.html.twig
+++ b/templates/video/viewVideo.html.twig
@@ -23,6 +23,7 @@ endblock %} {% block body %}
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
-
+  <p> titre : {{ video.name }}</p>
+  <p> vue : {{ views }} </p>
 </div>
 {% endblock %}
