home video and video page

--- a/templates/video/viewVideo.html.twig
+++ b/templates/video/viewVideo.html.twig
@@ -25,5 +25,7 @@ endblock %} {% block body %}
     ></iframe>
   <p> titre : {{ video.name }}</p>
   <p> vue : {{ views }} </p>
+  <p> Description : {{ video.description }} </p>
+
 </div>
 {% endblock %}
