--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -4,17 +4,48 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    body {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+    .videos {
+        /* display: flex; */
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fill,570px);   
+    }
+    .video {
+
+    }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'G:/Cour Sup/php/symfony/tutubeV2/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'G:/Cour Sup/php/symfony/tutubeV2/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
+<div class="videos">
+    {% for video in videos %}
+    
+    <div class="video" id="redirectIframe">
+            <a class="href" href="{{ path('view_video',{url_id : video.url_id }) }}">
+                <iframe 
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/{{ video.url_id }}"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                ></iframe> 
+                <p>{{video.name}}</p>
+            </a>
+            <p>{{video.date|date('d-m-Y')}}</p>
+            <p>{{video.tutuber }}</p>
+            <p>{{video.views|length}} veiws</p>
+        </div>
+    {% endfor %} 
 </div>
+
+<script>
+
+</script>
+
 {% endblock %}
