--- a/templates/video/viewVideo.html.twig
+++ b/templates/video/viewVideo.html.twig
@@ -1,15 +1,10 @@
 {% extends 'base.html.twig' %} {% block title %}Hello VideoController!{%
 endblock %} {% block body %}
 <style>
-  .example-wrapper {
-    margin: 1em auto;
-    max-width: 800px;
-    width: 95%;
-    font: 18px/1.5 sans-serif;
-  }
-  .example-wrapper code {
-    background: #f5f5f5;
-    padding: 2px 6px;
+  .comment {
+    padding: 20px;
+    width: 35%;
+    border: 2px solid black;
   }
 </style>
 
@@ -27,5 +22,22 @@ endblock %} {% block body %}
   <p> vue : {{ views }} </p>
   <p> Description : {{ video.description }} </p>
 
+  <div class="comments">
+    {% if userConnected %}
+      <div class="commentForm">
+        {{ form_start(commentForm) }}
+          {{ form_row(commentForm.Content) }}
+    
+          <button type="submit" class="btn">Commentez</button>
+        {{ form_end(commentForm) }}
+      </div>
+    {% endif %}
+    {% for comment in comments %}
+      <div class="comment"> 
+        <p>{{ comment.Author }}</p>
+        <p>{{ comment.Content }}</p>
+      </div>
+    {% endfor %}
+  </div>
 </div>
 {% endblock %}
