--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -39,7 +39,7 @@
             </a>
             <p>{{video.date|date('d-m-Y')}}</p>
             <p>{{video.tutuber }}</p>
-            <p>{{video.views|length}} veiws</p>
+            <p>{{video.views|length}} views</p>
         </div>
     {% endfor %} 
 </div>
