--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
+        and uncomment the following Encore helpers to start using Symfony UX #}
+        <link rel="stylesheet" type="text/css"
+            href="/assets/css/reset.css" media="all" />
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
