--- a/templates/video/viewVideo.html.twig
+++ b/templates/video/viewVideo.html.twig
@@ -6,18 +6,29 @@ endblock %} {% block body %}
     width: 35%;
     border: 2px solid black;
   }
+  .videoFull {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+  }
+  .videoFull > iframe{
+    width: 80%;
+    height: 700px;
+  }
 </style>
 
 <div class="">
+  <div class="videoFull">
     <iframe
-      width="560"
-      height="315"
+      width="1669"
+      height="700"
       src="https://www.youtube.com/embed/{{ url }}"
       title="YouTube video player"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
+  </div>
   <p> titre : {{ video.name }}</p>
   <p> vue : {{ views }} </p>
   <p> Description : {{ video.description }} </p>
