admin feature finished and trending+discovery feature

--- a/templates/admin/moderateVideo.html.twig
+++ b/templates/admin/moderateVideo.html.twig
@@ -47,7 +47,7 @@
         <div class="comment"> 
           <p>{{ comment.Author }}</p>
           <p>{{ comment.Content }}</p>
-          <a class="btn btn-danger" href="{{path('admin_delete_comment', { id : comment.id })}}">fsdfdsf</a>
+          <a class="btn btn-danger" href="{{path('admin_delete_comment', { id : comment.id })}}">X</a>
         </div>
       {% endfor %}
     </div>
