--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,36 +1,65 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseLocal.html.twig' %}
 
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
 <style>
-    body {
+    .body {
         margin-left: 3%;
         margin-right: 3%;
     }
     .videos {
+        
         /* display: flex; */
         justify-content: space-between;
         flex-wrap: wrap;
         width: 100%;
         display: grid;
         grid-template-columns: repeat(auto-fill,570px);   
-    }
-    .video {
+        margin-top: 30px;
 
     }
+    .video {
+       
+    }
+    label[for=form_name]{
+        display: none;
+    }
+    .search {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 50px;
+        /* background-color: black; */
+    }
+    .search > div {
+        width:100%;
+    }
+    .searchInput{
+        width: 100%;
+    }
+    .searchBtn {
+        margin-left: 10px;
+        border: none;
+        background-color: rgb(0, 98, 255);
+        color: white;
+        border-radius: 10px;
+        padding: 10px;
+    }
 </style>
-    <div class="search">
-        {{ form_start(formSearch) }}
+<div class="search">
+    <div>
+    {{ form_start(formSearch) }}
         {{ form_row(formSearch.name, {
           'label': 'search',
-          'attr': {'class': ''}
+          'attr': {'class': 'searchInput'}
         }) }}
-        <div class="">
-          <button type="submit" class="">Submit</button>
-        </div>
-    {{ form_end(formSearch) }}
     </div>
+    <div class="">
+        <button type="submit" class="btn btn-outline-secondary ">Search</button>
+    </div>
+    {{ form_end(formSearch) }}
+</div>
 <div class="videos">
     {% for video in videos %}
     <div class="video" id="redirectIframe">
@@ -47,7 +76,7 @@
                 <p>{{video.name}}</p>
             </a>
             <p>{{video.date|date('d-m-Y')}}</p>
-            <p>{{video.tutuber }}</p>
+            <p><a href="{{ path('tutuber_page',{tutuberId:video.tutuber.id,tutuber :video.tutuber   }) }}"> {{video.tutuber }}</a></p>
             <p>{{video.views|length}} views</p>
         </div>
     {% endfor %} 
