--- a/templates/main/search.html.twig
+++ b/templates/main/search.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseLocal.html.twig' %}
 
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
 <style>
-    body {
+    .body {
         margin-left: 3%;
         margin-right: 3%;
     }
@@ -51,7 +51,7 @@
         }) }}
     </div>
     <div class="">
-        <button type="submit" class="btn btn-outline-secondary ">Submit</button>
+        <button type="submit" class="btn btn-outline-secondary ">Search</button>
     </div>
     {{ form_end(formSearch) }}
 </div>
@@ -71,7 +71,7 @@
                 <p>{{video.name}}</p>
             </a>
             <p>{{video.date|date('d-m-Y')}}</p>
-            <p>{{video.tutuber }}</p>
+            <p><a href="{{ path('tutuber_page',{tutuberId:video.tutuber.id,tutuber :video.tutuber   }) }}"> {{video.tutuber }}</a></p>
             <p>{{video.views|length}} views</p>
         </div>
     {% endfor %} 
