--- a/templates/user/subbedVideosPage.html.twig
+++ b/templates/user/subbedVideosPage.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseLocal.html.twig' %}
 
 {% block title %}Hello MainController!{% endblock %}
 
@@ -7,17 +7,17 @@
     html {
         height: 100%;
     }
-    body { 
-        margin-right: 3%;
-        display: flex;
+    .page { 
         height: 100%;
+        display: flex;
 
     }
     .sideBar {
         font-family: sans-serif;
         font-size: 20px;
         color: white;
-        height: 100%;
+        min-height:  calc(100vh - 100px );
+        
         margin-right: 3%;
         width: 20%;
         background-color: #966919;
@@ -39,6 +39,7 @@
     }
     .subTutuber {
         width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
     }
@@ -69,36 +70,38 @@
         background-color: burlywood;
     }
 </style>
-<div class="sideBar">
-    <span>Abonnement :</span>
-    <div class="subTutuber">
-        {% for tutuber in subbedTututber %}
-            <a class="href" href="{{ path('tutuber_page',{tutuber : tutuber.pseudo }) }}"> - {{ tutuber.pseudo }}</a>
-        {% endfor %}
+<div class="page">
+    <div class="sideBar">
+        <span>Abonnement :</span>
+        <div class="subTutuber">
+            {% for tutuber in subbedTututber %}
+                <a class="href" href="{{ path('tutuber_page',{tutuber : tutuber.pseudo, tutuberId: tutuber.id }) }}"> - {{ tutuber.pseudo }}</a>
+            {% endfor %}
+        </div>
     </div>
 
-</div>
-<div class="videos">
-    {% for video in last20VideosOfSubbedTutubers %}
-    
-    <div class="video" id="redirectIframe">
-            <a class="href" href="{{ path('view_video',{url_id : video.url_id }) }}">
-                <iframe 
-                    width="360"
-                    height="195"
-                    src="https://www.youtube.com/embed/{{ video.url_id }}"
-                    title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                ></iframe> 
-                <p>{{video.name}}</p>
-            </a>
-            <p>{{video.date|date('d-m-Y')}}</p>
-            <p>{{video.tutuber }}</p>
-            <p>{{video.views|length}} views</p>
-        </div>
-    {% endfor %} 
+    <div class="videos">
+        {% for video in last20VideosOfSubbedTutubers %}
+        
+        <div class="video" id="redirectIframe">
+                <a class="href" href="{{ path('view_video',{url_id : video.url_id }) }}">
+                    <iframe 
+                        width="360"
+                        height="195"
+                        src="https://www.youtube.com/embed/{{ video.url_id }}"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                    ></iframe> 
+                    <p>{{video.name}}</p>
+                </a>
+                <p>{{video.date|date('d-m-Y')}}</p>
+                <p>{{video.tutuber }}</p>
+                <p>{{video.views|length}} views</p>
+            </div>
+        {% endfor %} 
+    </div>
 </div>
 
 <script>
