--- a/templates/video/trendingVideos.html.twig
+++ b/templates/video/trendingVideos.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseLocal.html.twig' %}
 
 {% block title %}Hello MainController!{% endblock %}
 
 {% block body %}
 <style>
-    body {
+    .body {
         margin-left: 3%;
         margin-right: 3%;
     }
@@ -43,7 +43,7 @@
                 <p>{{video.name}}</p>
             </a>
             <p>{{video.date|date('d-m-Y')}}</p>
-            <p>{{video.tutuber }}</p>
+            <p><a href="{{ path('tutuber_page',{tutuberId:video.tutuber.id,tutuber :video.tutuber   }) }}"> {{video.tutuber }}</a></p>
             <p>{{video.views|length}} views</p>
         </div>
     {% endfor %} 
