--- a/templates/user/subbedVideosPage.html.twig
+++ b/templates/user/subbedVideosPage.html.twig
@@ -53,19 +53,6 @@
         text-decoration: none;
         color: white;
     }
-    /* .subTutuber p {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 50px;
-    }
-    .subTutuber p> a{
-        margin-left: -100px;
-        font-size: 20px;
-        color: white;
-        text-decoration: none;
-    } */
     .subTutuber a:hover {
         background-color: burlywood;
     }
@@ -97,7 +84,7 @@
                     <p>{{video.name}}</p>
                 </a>
                 <p>{{video.date|date('d-m-Y')}}</p>
-                <p>{{video.tutuber }}</p>
+                <p><a href="{{ path('tutuber_page',{tutuberId:video.tutuber.id,tutuber :video.tutuber   }) }}"> {{video.tutuber }}</a></p>
                 <p>{{video.views|length}} views</p>
             </div>
         {% endfor %} 
